// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - RemoveAllButton renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  background: #666666;
  border: 0;
  color: #ffffff;
  display: block;
  font-size: 1.8rem;
  font-weight: 700;
  padding: 0.8rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  max-width: 15rem;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0:focus {
  outline: 4px solid #ffbf47;
  outline-offset: 0;
}

@media (max-width:26.25em) {
  .c0 {
    font-size: 1.4rem;
    max-width: 9rem;
  }
}

<body>
    <div>
      <button
        class="c0"
      >
        Remove All
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="sc-bdVaJa ItcSe"
    >
      Remove All
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`COMPONENT - RemoveAllButton renders correctly with grey background 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c0 {
  background: #666666;
  border: 0;
  color: #ffffff;
  display: block;
  font-size: 1.8rem;
  font-weight: 700;
  padding: 0.8rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  max-width: 15rem;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0:focus {
  outline: 4px solid #ffbf47;
  outline-offset: 0;
}

@media (max-width:26.25em) {
  .c0 {
    font-size: 1.4rem;
    max-width: 9rem;
  }
}

<div>
      <button
        class="c0"
      >
        Remove All
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="sc-bdVaJa ItcSe"
    >
      Remove All
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
